Team member and timesheet tests modified, authorization tested