@@ -4,7 +4,6 @@ package projekat.controller;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -16,7 +15,6 @@ import projekat.services.JwtUtilService;
 import projekat.services.TeamMemberService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 public class TeamMemberController implements TeammemberApi {
@@ -37,7 +35,7 @@ public class TeamMemberController implements TeammemberApi {
 		final var teammembers = teamMemberService.getAll()
 				.stream()
 				.map(TeamMemberMapper::toTeamMemberDTO)
-				.collect(Collectors.toList());
+				.toList();
 		return new ResponseEntity(teammembers, HttpStatus.OK);
 	}
 
